readConfig文件 ————》 读取配置文件信息

--- a/config/config.ini
+++ b/config/config.ini
@@ -9,11 +9,11 @@
 [TESTSERVER]
 url = http://191.168.0.151/
 
-[TESTACCOUNT]
-# 测试账户
-account = wzh
-password = 123456
-name = 王泽浩
+;[TESTACCOUNT]
+;# 测试账户
+;account = wzh
+;password = 123456
+;name = 王泽浩
 
 ;[TESTDATA]
 
